tool/job json visibility fix

--- a/client/app/styles/_elements.scss
+++ b/client/app/styles/_elements.scss
@@ -559,7 +559,7 @@ legend {
           opacity: 0.7;
         }
       }
-      .revision-item {
+      .revisions-list {
         border-bottom: 1px solid #eee;
         &:last-child {
           border-bottom: none;
